// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnChooserHeader > should render by default 1`] = `
<header
  class="_header_5ee47b tc-tooltip-header tc-column-chooser-header _tc-column-chooser-header_27b2cf"
  id="column-chooser-header"
>
  <div>
    <div
      class="tc-column-chooser-header-title _tc-column-chooser-header-title_27b2cf"
    >
      Select columns to display
    </div>
    <div
      id="selected-columns-text"
    >
      5/6 selected
    </div>
  </div>
</header>
`;

exports[`ColumnChooserHeader should render by default 1`] = `
<header
  class="theme-header tc-tooltip-header tc-column-chooser-header theme-tc-column-chooser-header"
  id="column-chooser-header"
>
  <div>
    <div
      class="tc-column-chooser-header-title theme-tc-column-chooser-header-title"
    >
      Select columns to display
    </div>
    <div
      id="selected-columns-text"
    >
      5/6 selected
    </div>
  </div>
</header>
`;
